[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hohmannpy"
version = "0.0.1"
description = "An open-source library designed for rapid spacecraft design and iteration."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pygfx",
    "pandas"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hohmannpy*"]
